# hiviewdfx_hilog_lite

./: bundle.json
frameworks/featured/: BUILD.gn  Makefile  bundle.json  hiview_log.c
frameworks/js/: BUILD.gn
frameworks/js/builtin/include/: hilog_module.h
frameworks/js/builtin/src/: hilog_module.cpp  hilog_string.cpp  hilog_vector.cpp
frameworks/mini/: BUILD.gn  bundle.json  hiview_log.c  hiview_log_limit.c  hiview_log_limit.h  hiview_output_log.c  hiview_output_log.h  hiview_output_log_mini.c
interfaces/native/kits/hilog_lite/: hiview_log.h
services/apphilogcat/: BUILD.gn  hiview_applogcat.c
test/: BUILD.gn
test/unittest/: hilog_lite_test.cpp
